fixed alignment mobile resol

--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -145,6 +145,9 @@
 }
 
 @media screen and (max-width: 480px) {
+  .about__left {
+    margin-left: 1rem;
+  }
   .about__left--title {
     font-size: 2.5rem;
   }
@@ -161,5 +164,8 @@
   .skills-icons img {
     width: 35px;
     height: 35px;
+  }
+  .about__right--image {
+    display: none;
   }
 }
