--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -156,8 +156,10 @@
   }
 }
 
-/* Small Mobile (max-width: 480px) */
 @media screen and (max-width: 480px) {
+  .footer {
+    height: auto;
+  }
   .footer__left--contact-text {
     font-size: 1.8rem;
   }
